test/libsolidity/syntaxTests/inline_arrays/unnamed_types_in_inline_array_2.sol
contract C {
    function f() public {
        [type(C)];
    }
}
// ----
// TypeError 9563: (48-55): Invalid mobile type.
